SR-7570: Initializing XMLDocument crashes on Linux with nodePreserveAll

- Converting the options to an Int32 caused an overflow, so make
  _CFXMLDocPtrFromDataWithOptions() take the options as an
  unsigned int instead.

(cherry picked from commit fb6c82ee3eb5ce97e1b96afcee770bc48b2fba8b)